# dsn

./: Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
crates/parser/: Cargo.toml
crates/parser-proc-macro/: Cargo.toml
crates/parser-proc-macro/src/: lib.rs
crates/parser-proc-macro/tests/: test_macros.rs
crates/parser/src/: lib.rs
src/: atoms.rs  lib.rs  numeric.rs  pcb.rs  session.rs  shapes.rs
tests/: tests.rs
tests/inputs/: rp2040.dsn
tests/snapshots/: tests__rp2040.snap
