[package]
name = "dsn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dsn"
crate-type = ["cdylib", "rlib"]

[dependencies]
chumsky = "0.9.3"
derive_builder = "0.20.2"
insta = "1.42.0"
pyo3 = "0.23.1"
parser = { path = "./crates/parser" }
parser-proc-macro = { path = "./crates/parser-proc-macro" }

[workspace]
members = ["crates/*"]
