[package]
name = "parser-proc-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
parser = { path = "../parser" }
chumsky = "0.9.3"
convert_case = "0.7.1"
derive_builder = "0.20.2"
insta = "1.42.0"
